--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
   <string name="use_xml">Use xml</string>
   <string name="undo">Undo</string>
   <string name="trim">Trim</string>
-  <string name="showPath">Show path after trimming</string>
+  <string name="show_path">Show path after trimming</string>
 </resources>
